[project]
name = "arcane-ui"
version = "0.0.1"
authors = [
  { name="PineaFan", email="ash@pinea.dev" }
]
description = "Python Curses helper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: Unix",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ArcaneUI"]

[project.urls]
Homepage = "https://github.com/PineaFan/ArcaneUI"
